--- a/readthedocs/projects/static-src/projects/css/_header.less
+++ b/readthedocs/projects/static-src/projects/css/_header.less
@@ -35,6 +35,9 @@
       background-size: .75rem .75rem
     }
   }
+  .navbar-collapsable {
+    z-index: 10;
+  }
 }
 
 @media (min-width: 768px) {
