--- a/readthedocs/projects/static/projects/css/main.css
+++ b/readthedocs/projects/static/projects/css/main.css
@@ -231,7 +231,7 @@ select:hover {
 }
 .search-main .search-main-icon {
   margin-right: -54px;
-  z-index: 10;
+  z-index: 1;
 }
 .search-main .search-main-icon .input-group-text {
   background: transparent;
@@ -244,6 +244,9 @@ select:hover {
   border-bottom: 0;
   padding: .375rem .5rem .375rem 3.375rem;
   box-shadow: 0 10px 40px 0 rgba(102, 165, 227, 0.4);
+}
+.search-main input[type=text].search-main-input:focus {
+  z-index: 0;
 }
 .simplelayout-main-content p,
 .simplelayout-main-content ul {
@@ -384,6 +387,9 @@ select:hover {
   color: #19191a;
   background: transparent url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3E%3Cpath fill='%23292b2c' d='M2.3 6.73L.6 4.53c-.4-1.04.46-1.4 1.1-.8l1.1 1.4 3.4-3.8c.6-.63 1.6-.27 1.2.7l-4 4.6c-.43.5-.8.4-1.1.1z'/%3E%3C/svg%3E") 0.4rem 0.6rem no-repeat;
   background-size: 0.75rem 0.75rem;
+}
+.bd-navbar .navbar-collapsable {
+  z-index: 10;
 }
 @media (min-width: 768px) {
   @supports ((position: -webkit-sticky) or (position: sticky)) {
